@@ -4,6 +4,8 @@ Version 2.9 (X X, 2017) - ""
 *** CORE/CPU *** Thanks to DJRobX
 Support for some Stargame games added
 
+Joctronic emulation works now, yet still no good dumps for Punky Willy, and Pin-Ball is missing entirely...
+
 Using GTS80 gen. 2 sound on Excalibur instead of gen. 3, enabling 8910 sounds (thanks to Jim Hernandez for noticing)
 
 Fix some GTS3 DMD animations running too fast
